--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
 </head>
 <body>
     <div class="container">
-        <div class="judul">
-            <img src="Gambar/FTI.png" alt="">
-            <h2>Transkrip Nilai Mahasiswa<br>Fakultas Teknologi Informasi</h2>
+        <div class="kiri">
+            <div class="judul">Halo,<br></div>
+            <div class="selamat">Selamat datang di web Transkrip Nilai.</div>
         </div>
-        <h4>Masuk sebagai :</h4>
-        <a href=""><button>Dosen</button></a>
-        <a href="loginmahasiswa.html"><button>Mahasiswa</button></a>
-        <a href=""><button>Admin</button></a>
-        
+        <div class="kanan">
+            <div class="masuk">
+                <h2>Masuk sebagai :</h2>
+                <div class="button">
+                    <a href="loginmahasiswa.html">
+                    <button >Mahasiswa</button>
+                    </a>
+                    <button>Dosen</button>
+                    <button>Admin</button>
+                </div>
+            </div>
+        </div>
+
     </div>
+
 </body>
 </html>
